--- a/index.html
+++ b/index.html
@@ -176,27 +176,28 @@
 			<section id="about" >
 				<div class="container">
 					<div class="row">
-						<div class="col-md-4 wow animated fadeInLeft">
+						<div class="col-md-2 wow animated fadeInLeft">
 							<div class="recent-works">
 								<h3>Recent Works</h3>
 								<div id="works">
 									<div class="work-item">
-										<p> I am currently enrolled in the course, Storytelling with Data, offered by the Journalism school at Columbia University. The course instructor is Jonathan Soma. I am learning to create infographics and data visualizations using D3.js, HTML, CSS and Bootstrap.</p>
+										<p> I am a first year Master's studentt at the Data Science Institute at Columbia University in the City of New York. I am passionate about working with data and using data science to solve real-world problems.</p>
+						     	  I am currently enrolled in the course, Storytelling with Data, offered by the Journalism school at Columbia University. The course instructor is Jonathan Soma. I am learning to create infographics and data visualizations using D3.js, HTML, CSS and Bootstrap.</p>
 									</div>
 
 								</div>
 							</div>
 						</div>
-						<div class="col-md-7 col-md-offset-1 wow animated fadeInRight">
+<!-- 						<div class="col-md-7 col-md-offset-1 wow animated fadeInRight">
 							<div class="welcome-block">
 								<h3>Welcome To My Site</h3>
 						     	 <div class="message-body">
 									<img src="img/avatar-empty.jpg" class="pull-left" alt="member">
-						       		<p>I am a first year Master's studnet at the Data Science Institute at Columbia University in the City of New York. I am passionate about working with data and using data science to solve real-world problems.</p>
+						       		<p>I am a first year Master's studentt at the Data Science Institute at Columbia University in the City of New York. I am passionate about working with data and using data science to solve real-world problems.</p>
 						     	 </div>
 
 						    </div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</section>
