--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 								<h3>About Me</h3>
 								<div id="works">
 									<div class="work-item">
-										<p> I am a first year Master's studentt at the Data Science Institute at Columbia University in the City of New York. I am passionate about working with data and using data science to solve real-world problems.
+										<p> I am a first year Master's student at the Data Science Institute at Columbia University in the City of New York. I am passionate about working with data and using data science to solve real-world problems.
 						     	  I am currently enrolled in the course, Storytelling with Data, offered by the Journalism school at Columbia University. The course instructor is Jonathan Soma. I am learning to create infographics and data visualizations using D3.js, HTML, CSS and Bootstrap.</p>
 									</div>
 
