--- a/index.html
+++ b/index.html
@@ -356,9 +356,9 @@
 			</section>
 			<!-- end Contact section -->
 
-			<section id="google-map">
+<!-- 			<section id="google-map">
 				<div id="map-canvas" class="wow animated fadeInUp"></div>
-			</section>
+			</section> -->
 
 		</main>
 
